# oracle-mcp

./: README.md
python-monorepo-utils/: .gitignore  README.md  pyproject.toml
python-monorepo-utils/monorepo_utils/: bump_versions.py  check_changelogs.py  cli.py  create_release.py  install_hooks.py
python-monorepo-utils/tests/: test_bump_versions.py  test_check_changelogs.py  test_create_release.py  test_install_hooks.py
src/oci-api-mcp-server/: CHANGELOG.md  README.md
src/oci-cloud-guard-mcp-server/: CHANGELOG.md  pyproject.toml
src/oci-compute-instance-agent-mcp-server/: CHANGELOG.md
src/oci-compute-mcp-server/: CHANGELOG.md
src/oci-identity-mcp-server/: CHANGELOG.md
src/oci-logging-mcp-server/: CHANGELOG.md
src/oci-migration-mcp-server/: CHANGELOG.md
src/oci-monitoring-mcp-server/: CHANGELOG.md
src/oci-network-load-balancer-mcp-server/: CHANGELOG.md
src/oci-networking-mcp-server/: CHANGELOG.md
src/oci-object-storage-mcp-server/: CHANGELOG.md
src/oci-registry-mcp-server/: CHANGELOG.md
src/oci-resource-search-mcp-server/: CHANGELOG.md
src/oci-usage-mcp-server/: CHANGELOG.md
